--- a/app/globals.css
+++ b/app/globals.css
@@ -4,98 +4,86 @@
 
 @layer base {
   :root {
-    --background-lighter: 267 45% 26%;
-    --background: 267 45% 16%;
-    --background-darker: 267 45% 6%;
-    --foreground: 0 0% 98%;
+    --background-lighter: 250 31% 20%;
+    --background: 250 31% 13%;
+    --background-darker: 250 31% 8%;
+    --foreground: 0 0% 100%;
 
-    --background: 267 45% 16%;
-    --foreground: 0 0% 98%;
+    --card: 250 31% 13%;
+    --card-foreground: 0 0% 100%;
 
-    --card: 267 45% 16%;
-    --card-foreground: 0 0% 98%;
+    --popover: 250 31% 13%;
+    --popover-foreground: 0 0% 100%;
 
-    --popover: 267 45% 16%;
-    --popover-foreground: 0 0% 98%;
+    --primary: 236 75% 70%;
+    --primary-foreground: 0 0% 100%;
 
-    --primary: 267 100% 61%;
-    --primary-foreground: 0 0% 98%;
+    --secondary: 210 100% 60%;
+    --secondary-foreground: 0 0% 100%;
 
-    --secondary: 221 83% 53%;
-    --secondary-foreground: 0 0% 98%;
+    --muted: 250 31% 20%;
+    --muted-foreground: 250 31% 80%;
 
-    --muted: 267 45% 26%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 300 100% 60%;
+    --accent-foreground: 0 0% 100%;
 
-    --accent: 270 100% 60%;
-    --accent-foreground: 0 0% 98%;
+    --destructive: 0 84% 60%;
+    --destructive-foreground: 0 0% 100%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 215 25% 27%;
-    --input: 215 25% 27%;
-    --ring: 263.4 70% 50.4%;
-
-    /* UI Elements */
-    --glass-bg: hsla(0, 0%, 100%, 0.07);
-    --glass-border: hsla(0, 0%, 100%, 0.05);
-    --glass-blur: 12px;
+    --border: 250 31% 30%;
+    --input: 270 70% 40%;
+    --ring: 210 70% 50%;
 
     /* Text Colors */
-    --text-primary: 0 0% 98%;
-    --text-secondary: 240 5% 65%;
-    --text-muted: 240 5% 40%;
+    --text-primary: 0 0% 100%;
+    --text-secondary: 250 5% 65%;
+    --text-muted: 250 5% 40%;
 
     --transition-normal: 0.1s ease-in-out;
   }
 
   :root[data-theme='light'] {
-    --background-lighter: 267 45% 96%;
-    --background: 267 45% 90%;
-    --background-darker: 267 45% 80%;
-    --foreground: 267 45% 9%;
+    --background-lighter: 250 31% 98%;
+    --background: 250 31% 97%;
+    --background-darker: 250 31% 95%;
+    --foreground: 250 31% 9%;
 
-    --background: 267 45% 90%;
-    --foreground: 267 45% 9%;
+    --background: 250 31% 97%;
+    --foreground: 250 31% 9%;
 
-    --card: 267 45% 90%;
-    --card-foreground: 267 45% 9%;
+    --card: 250 31% 97%;
+    --card-foreground: 250 31% 9%;
 
-    --popover: 267 45% 90%;
-    --popover-foreground: 267 45% 9%;
+    --popover: 250 31% 97%;
+    --popover-foreground: 250 31% 9%;
 
-    --primary: 267 100% 61%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 236 75% 70%;
+    --primary-foreground: 236 75% 25%;
 
-    --secondary: 221 83% 53%;
-    --secondary-foreground: 0 0% 98%;
+    --secondary: 210 100% 60%;
+    --secondary-foreground: 0 0% 100%;
 
-    --muted: 267 45% 96%;
-    --muted-foreground: 267 35% 25%;
+    --muted: 250 31% 98%;
+    --muted-foreground: 250 31% 40%;
 
-    --accent: 270 100% 60%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 300 100% 60%;
+    --accent-foreground: 0 0% 100%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: 0 84% 60%;
+    --destructive-foreground: 0 0% 100%;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 263.4 70% 50.4%;
+    --border: 250 31% 88%;
+    --input: 250 31% 90%;
+    --ring: 210 70% 50%;
 
-    --glass-bg: hsla(267, 45%, 20%, 0.05);
-    --glass-border: hsla(267, 45%, 20%, 0.2);
-    --glass-blur: 12px;
-
-    --text-primary: 267 45% 9%;
-    --text-secondary: 267 35% 25%;
-    --text-muted: 267 25% 60%;
+    --text-primary: 250 31% 9%;
+    --text-secondary: 250 31% 25%;
+    --text-muted: 250 31% 60%;
   }
 
   @layer base {
     * {
-      border-color: var(--glass-border);
+      border-color: hsl(var(--border));
       cursor: none;
     }
   }
@@ -106,7 +94,6 @@
   h4,
   h5,
   h6 {
-    font-family: var(--font-outfit);
     font-weight: 500;
   }
 
@@ -177,34 +164,12 @@
 
 html {
   background: hsl(var(--background));
+  max-width: 100vw;
 }
 body {
   color: hsl(var(--text-primary));
   min-height: 100vh;
-  background: linear-gradient(
-      135deg,
-      hsl(var(--background-lighter)),
-      hsl(var(--background)),
-      hsl(var(--background-darker))
-    ),
-    radial-gradient(circle at var(--x, 0%) var(--y, 0%), hsl(var(--primary) / 0.3), transparent 40%),
-    radial-gradient(
-      circle at var(--x2, 100%) var(--y2, 0%),
-      hsl(var(--secondary) / 0.3),
-      transparent 40%
-    ),
-    radial-gradient(
-      circle at var(--x3, 0%) var(--y3, 100%),
-      hsl(var(--accent) / 0.3),
-      transparent 40%
-    );
-  animation:
-    move-x 15s cubic-bezier(0.4, 0, 0.2, 1) infinite,
-    move-y 15s cubic-bezier(0.4, 0, 0.2, 1) infinite,
-    move-x2 20s cubic-bezier(0.4, 0, 0.2, 1) infinite,
-    move-y2 20s cubic-bezier(0.4, 0, 0.2, 1) infinite,
-    move-x3 25s cubic-bezier(0.4, 0, 0.2, 1) infinite,
-    move-y3 25s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+  max-width: 100vw;
 }
 
 @keyframes move-x {
@@ -315,24 +280,6 @@ body {
     --angle: 360deg;
   }
 }
-.glass {
-  background: var(--glass-bg);
-  border: 1px solid var(--glass-border);
-  border-radius: 1rem;
-
-  &.interactive {
-    transition: all var(--transition-normal);
-
-    &:hover {
-      background: rgba(255, 255, 255, 0.1);
-      transform: translateY(-2px);
-    }
-
-    &:active {
-      transform: translateY(0);
-    }
-  }
-}
 
 .text-gradient {
   background: linear-gradient(to right, var(--gradient-1), var(--gradient-2), var(--gradient-3));
@@ -343,9 +290,6 @@ body {
   animation: gradient 8s ease infinite;
 }
 
-.rounded-full {
-  border-radius: 2rem;
-}
 * {
   cursor: none !important;
 }
