--- a/app/globals.css
+++ b/app/globals.css
@@ -164,12 +164,12 @@
 
 html {
   background: hsl(var(--background));
-  max-width: 100vw;
+  max-width: 100dvw;
 }
 body {
   color: hsl(var(--text-primary));
-  min-height: 100vh;
-  max-width: 100vw;
+  min-height: 100dvh;
+  max-width: 100dvw;
 }
 
 @keyframes move-x {
